<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_licence_page">Please accept Terms &amp; Privacy</string>
    <string name="accept_terms_and_conditions"><u>I agree to Matrix Industries</u></string>
    <string name="account_settings">Account Settings</string>
    <string name="activation">Activation</string>
    <string name="active_calories_title">ACTIVE CALORIES</string>
    <string name="activities">Activities</string>
    <string name="activity_biking">Outdoor Cycle</string>
    <string name="activity_date">DATE</string>
    <string name="activity_driving">Driving</string>
    <string name="activity_hiit">Interval Training</string>
    <string name="activity_indoor_biking">Indoor Cycle</string>
    <string name="activity_indoor_jogging">Indoor Jog</string>
    <string name="activity_indoor_run">Indoor Run</string>
    <string name="activity_indoor_walking">Indoor Walk</string>
    <string name="activity_jogging">Outdoor Jog</string>
    <string name="activity_outdoor_run">Outdoor Run</string>
    <string name="activity_stationary">Stationary</string>
    <string name="activity_time">TIME</string>
    <string name="activity_title">Activity</string>
    <string name="activity_type">ACTIVITY TYPE</string>
    <string name="activity_unknown">Unknown</string>
    <string name="activity_walking">Outdoor Walk</string>
    <string name="age">Age</string>
    <string name="alarm_set">Alarm</string>
    <string name="alert_set">Alert</string>
    <string name="alerts_label">PowerWatch2 Alerts Service</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="app_name">PowerWatch2</string>
    <string name="app_secret_screen_title">App Secret Config</string>
    <string name="app_version">Version: %1$s (%2$s)</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applying_updates">Applying updates…</string>
    <string name="asleep_header_title">Asleep</string>
    <string name="audio">Audio</string>
    <string name="auto">Auto</string>
    <string name="average_active_calories">AVG Active Calories</string>
    <string name="average_days">Average for previous 7 days</string>
    <string name="average_pace">Average pace</string>
    <string name="average_speed">AVERAGE SPEED</string>
    <string name="avg_bmr_calories">AVG BMR Calories</string>
    <string name="avg_distance_title">AVG DISTANCE</string>
    <string name="avg_duration">AVG DURATION</string>
    <string name="avg_from_body">AVG FROM BODY</string>
    <string name="avg_from_light">AVG FROM LIGHT</string>
    <string name="avg_heartrate">Avg Heart rate</string>
    <string name="avg_restless">AVG RESTLESS</string>
    <string name="avg_steps_title">AVG STEPS</string>
    <string name="awake_state">Awake</string>
    <string name="backlight_double_tap">Double Tap</string>
    <string name="backlight_duration_set">Backlight Duration</string>
    <string name="backlight_set">Backlight</string>
    <string name="backlight_shake">Shake</string>
    <string name="backlight_tilt">Tilt</string>
    <string name="bad_watch_placement">Bad watch placement.</string>
    <string name="bad_watch_placement_description">Portion of data recorded while watch may have been in poor contact with your wrist.</string>
    <string name="baidu_maps_key">VZDXIztLQGI6ilIK2l3u1O2rh24Wqebk</string>
    <string name="battery_critical" formatted="false">Your PowerWatch 2 battery is critical - %s%</string>
    <string name="battery_full">Your PowerWatch 2 battery is full</string>
    <string name="battery_low" formatted="false">Your PowerWatch 2 battery is low - %s%</string>
    <string name="battery_warning">Battery Status</string>
    <string name="ble_disconnection_set">BLE Disconnection</string>
    <string name="bluetooth_disabled_message">Bluetooth is disabled.</string>
    <string name="bmr_calories_title">BMR CALORIES</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_why">Why?</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_continue">Continue</string>
    <string name="button_done">Done</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="call_screening_text">Call Screening</string>
    <string name="calls">Calls</string>
    <string name="calories_title">Calories</string>
    <string name="camera_permission_desc">Enable camera so you can pair with your PowerWatch2 device.</string>
    <string name="cancel_locations_enable">Cancel</string>
    <string name="cant_see_qr_code">"Can't see QR code?"</string>
    <string name="change">Change</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_not_possible">Cannot change your password right now, please try later.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_button">Choose</string>
    <string name="choose_file_format">Choose the file format</string>
    <string name="choose_product_screen_title">"Pair Your
PowerWatch"</string>
    <string name="choose_reset_option">Choose reset option</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_verify">After verifying, click the link below to continue</string>
    <string name="client_id">40830</string>
    <string name="client_secret">bc204725e481a65fb4bbdc8e546843a7a64765e1</string>
    <string name="clock">Clock</string>
    <string name="code">Code</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="connecting_to_device">Connecting…</string>
    <string name="connection_optimization_body_disabled">Disabling this setting might worsen connectivity with your PowerWatch</string>
    <string name="connection_optimization_body_enabled">"Enabling this setting will improve connectivity with your PowerWatch. 

NOTE: On some models (OnePlus, Motorola, Xiaomi) this might result in unstable connection with PowerWatch"</string>
    <string name="connection_optimization_title">Connection optimization</string>
    <string name="contact_support">Contact Support</string>
    <string name="copy">Copy</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_title">Create an Account</string>
    <string name="current_temp">Current: %s</string>
    <string name="current_value">Current value: %1$s</string>
    <string name="czech_language">Čeština</string>
    <string name="daily_calories">Daily target of %s reached!</string>
    <string name="daily_goal_calories">Daily goal: %1$s Active Calories</string>
    <string name="daily_goals">Daily Goals</string>
    <string name="dont_have_account">"Don't have an account?"</string>
    <string name="email">Email</string>
    <string name="forgot_password_label">Forgot Password?</string>
    <string name="friday">F</string>
    <string name="gpx_format">GPX</string>
    <string name="log_in">Log In</string>
    <string name="monday">M</string>
    <string name="name_hint">Your Name</string>
    <string name="network_not_available_text">You are offline. Check your connection.</string>
    <string name="password">Password</string>
    <string name="power_title">Power</string>
    <string name="saturday">S</string>
    <string name="share_activity_title">Share Activity</string>
    <string name="sleep_title">Sleep</string>
    <string name="steps">Steps</string>
    <string name="sunday">S</string>
    <string name="tap_here_to_login">Tap here to login</string>
    <string name="tcx_format">TCX</string>
    <string name="terms_and_conditions">Terms &amp; Privacy</string>
    <string name="thursday">T</string>
    <string name="tuesday">T</string>
    <string name="wednesday">W</string>
</resources>