<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="28.0sp" android:textColor="@color/red" android:id="@id/current_date" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="28.0sp" android:textColor="@color/red" android:id="@id/current_month" android:paddingLeft="8.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:weightSum="7.0">
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button4" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sunday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button10" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/monday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button9" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tuesday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button8" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wednesday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button7" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/thursday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button6" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/friday" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/red" android:id="@id/button5" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/saturday" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/calendar_months_container" android:layout_width="match_parent" android:layout_height="wrap_content" />
</LinearLayout>
