<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/fragment_create_account_0" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:background="@drawable/white_background" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:id="@id/login_details" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content">
            <include android:layout_width="match_parent" android:layout_height="140.0dp" layout="@layout/login_toolbar" />
            <LinearLayout android:orientation="vertical" android:padding="20.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
                <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableEditText android:id="@id/email_edit_text" android:tag="binding_2" android:hint="@string/email" android:inputType="textEmailAddress" app:customFont="proTextRegular" style="@style/EditTextStyle" />
                <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableEditText android:id="@id/name_edit_text" android:tag="binding_3" android:layout_marginTop="20.0dp" android:hint="@string/name_hint" android:inputType="text" app:customFont="proTextRegular" style="@style/EditTextStyle" />
                <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableEditText android:id="@id/password_edit_text" android:tag="binding_4" android:layout_marginTop="20.0dp" android:hint="@string/password" android:inputType="textPassword" app:customFont="proTextRegular" style="@style/EditTextStyle" />
                <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableEditText android:id="@id/password_confirm_edit_text" android:tag="binding_5" android:layout_marginTop="20.0dp" android:hint="@string/confirm_password" android:inputType="textPassword" app:customFont="proTextRegular" style="@style/EditTextStyle" />
                <FrameLayout android:id="@id/biometrics_container" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dp" />
                <RelativeLayout android:id="@id/terms_and_conditions_layout" android:layout_width="match_parent" android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatCheckBox android:textSize="14.0sp" android:layout_gravity="center_vertical" android:id="@id/terms_check_box" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/terms_check_box" android:layout_alignParentTop="true">
                        <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableTextView android:textSize="13.0sp" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accept_terms_and_conditions" app:customFont="proTextRegular" />
                        <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableTextView android:textSize="13.0sp" android:textColor="@color/black" android:layout_gravity="center_vertical" android:tag="binding_7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_and_conditions" app:customFont="proTextRegular" />
                    </LinearLayout>
                </RelativeLayout>
                <FrameLayout android:layout_width="match_parent" android:layout_height="50.0dp" android:layout_marginTop="20.0dp">
                    <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableButton android:textColor="@android:color/white" android:id="@id/create_account" android:tag="binding_8" android:background="@drawable/rounded_red_button_background" android:layout_width="match_parent" android:layout_height="50.0dp" android:text="@string/create_account" android:textAllCaps="false" app:customFont="medium" />
                    <ProgressBar android:layout_gravity="center" android:tag="binding_9" android:layout_width="50.0dp" android:layout_height="50.0dp" />
                </FrameLayout>
                <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableTextView android:textSize="14.0sp" android:textColor="@color/red" android:gravity="center_horizontal" android:tag="binding_10" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" app:customFont="proTextRegular" />
                <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="50.0dp">
                    <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableTextView android:textSize="16.0sp" android:textColor="@color/grey" android:gravity="center_horizontal" android:tag="binding_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dp" android:layout_marginBottom="50.0dp" android:text="@string/tap_here_to_login" app:customFont="proTextRegular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="vertical" android:tag="binding_13" android:background="@color/red" android:padding="12.0dp" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content">
        <powerwatch.matrix.com.pwgen2android.shared.ui.views.FontableTextView android:textColor="@color/white" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/network_not_available_text" app:customFont="proTextRegular" />
    </LinearLayout>
</FrameLayout>
